data/derived/comb/progs/unify/prog0027.ml.out
Characters 14-15:
  let _ = last [1; 2; 3; 4];;
                ^
Error: This expression has type int but an expression was expected of type
         'a list
